integracja front-back-AI oraz naprawa AI FRONTEND - Streamlit wysyła teraz POST `/ask` do back-endu pod adresem z `BACKEND_URL` (z .env) - Obsługa odpowiedzi JSON `{ answer, sources }` i wyświetlanie źródeł
BACKEND
- FastAPI proxyuje `/ask` -> przesyła JSON do AI-service (`AI_URL` z .env)
- Błędy HTTP z AI-service zwracane 1:1 do frontendu (raise HTTPException)
- Usunięte stare importy i ustawiony `PYTHONPATH=/app/src` w Dockerfile

AI
- Nowy FastAPI w `ai/src/app.py` wystawia `/ask` na porcie 9000
- Importy: uporządkowane, bez ręcznego `sys.path.append`, absolute imports `ai_service.*` i `services.*`
- Query Pinecone przez nową klasę `Pinecone(api_key, environment)` zamiast `pinecone.init()`
- ChatOpenAI ładowany z `langchain-openai`, korzysta z `OPENAI_API_KEY` z env
- Dodane `env_file: .env` w docker-compose dla usługi ai, by klucze POPRAWNIE wczytywać
- Dockerfile zoptymalizowane pod cache pip (COPY requirements → RUN pip install → COPY src)

INNE TAKIE
- Montujemy hostowy cache pip (`~/.cache/pip`) i kod (`./ai/src:/app/src`), zeby bylo szybciej ale to chyba nie dziala mi :)

--- a/ai/requirements.txt
+++ b/ai/requirements.txt
@@ -1,3 +1,13 @@
-flask
-streamlit
+fastapi
+uvicorn
 python-dotenv
+
+openai
+sentence-transformers
+scikit-learn
+pdfplumber
+pandas
+numpy
+langchain-openai==0.2.0
+pinecone
+langchain-community
