--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,6 +1,9 @@
 FROM python:3.11-slim
 WORKDIR /app
-COPY ./src /app/src
-COPY requirements.txt /app/requirements.txt
+
+COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
-CMD ["python", "src/app.py"]
+
+COPY src ./src
+
+CMD ["uvicorn", "src.app:app", "--host", "0.0.0.0", "--port", "8000"]
