--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,17 +1,29 @@
-version: "3.9"
-
 services:
   ai:
     build: ./ai
-    environment:
-      - AI_MODEL=advanced-model
-
+    volumes:
+      - ./ai/src:/app/src
+      - ~/.cache/pip:/root/.cache/pip
+      - ./.env:/app/.env
+    ports:
+      - "9000:9000"
+    env_file:
+      - .env
   backend:
     build: ./backend
+    ports:
+      - "8000:8000"
+    env_file: .env
+    command: uvicorn src.app:app --host 0.0.0.0 --port 8000
+    depends_on:
+      - ai
     environment:
-      - DB_URL=localhost:5432
+      - AI_URL=http://ai:9000
 
   frontend:
     build: ./frontend
     ports:
       - "8501:8501"
+    env_file: .env
+    depends_on:
+      - backend
