--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,7 +14,7 @@ services:
     ports:
       - "8000:8000"
     env_file: .env
-    command: uvicorn src.app:app --host 0.0.0.0 --port 8000
+    command: uvicorn src.app:app --host 0.0.0.0 --port 8000 --log-level debug
     depends_on:
       - ai
     environment:
